# zk-crosschain-did

./: .gitignore  .gitmodules  .prettierignore  README.md  zk-crosschain-did.code-workspace
.devcontainer/data_apis/: devcontainer.json
.devcontainer/zk_oracles/: devcontainer.json
chainlink/: .gitignore  .npmignore  Functions-request-config.ts  hardhat.config.js  hardhat.config.ts  input.json  networks.js  networks.ts  package-lock.json  package.json  pnpm-lock.yaml
chainlink-hardhat/: Functions-request-config.js  docker-compose-chainlink-hardhat.yaml  functions-testnet-config.json  hardhat.config.ts  package-lock.json  package.json
chainlink-hardhat/clroot/: api-credentials  config.toml
chainlink-hardhat/contracts/: FunctionsConsumer.sol  Registry.sol
circuits-go/: .gitignore  go.mod  main.go
circuits-go/utils/: path.go
data_apis/: Cargo.toml  Dockerfile.api  Dockerfile.api.mongo  Dockerfile.pg.api  init.sh  start.sh
data_apis/src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  utils.rs
data_apis/src/models/: credential.rs  mod.rs  request_params.rs  status_state.rs
data_apis/src/routes/: app_routes.rs  credential_routes.rs  mod.rs  status_routes.rs
data_apis/src/services/: credential_service.rs  mod.rs  status_service.rs
deployments/: deployment-info.json
docker/: Dockerfile.api  Dockerfile.oracle  build.sh  docker-compose.yml  init.sh  start.sh  start2oracle.sh  startapi.sh  startlistener.sh  startserver.sh
onchain_solidity/: Functions-request-config.ts  deployment-info.json  networks.js  networks.ts  package-lock.json  package.json  pnpm-lock.yaml
runner/: Cargo.toml
visualization/: main.py  pyproject.toml
visualization/data/: alldata.csv  offchain-state_transition.csv  onchain-status_fulfillment.csv
visualization/data/zkcrossdid-exp/: Sheet 1-Table 1.csv  memory-Table 1.csv  oracles-Table 1.csv
visualization/utils/: args.py  visualization.py
zk_oracles/: Cargo.toml  build.rs  test.sh
zk_oracles/proto/: status_exchange.proto
zk_oracles/src/: alloy.rs  client.rs  errors.rs  lib.rs  listener.rs  main.rs  server.rs
zk_oracles/src/services/: mod.rs  oracle_manager_service.rs  oracle_request_service.rs  request_report_service.rs  request_service.rs  status_exchange_service.rs  status_service.rs
zk_oracles/src/utils/: solidity.rs
zkcdid-lib-rs/: Cargo.toml  build.rs
zkcdid-lib-rs/proto/: status_exchange.proto
zkcdid-lib-rs/src/: config.rs  contracts.rs  lib.rs
zkcdid-lib-rs/src/models/: credential.rs  mod.rs  oracle.rs  oracle_request.rs  request.rs  request_report.rs  status_state.rs
zkcdid-lib-rs/src/utils/: db.rs  macros.rs  mod.rs  serializer.rs
zkssi-rs/: Cargo.toml
(+152 files in other folders)
