[package]
name = "data_apis"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
base64 = "0.22.1"
bson = "2.13.0"
futures-util = "0.3.31"
mongodb = "3.1.0"
serde = { version="1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = "1.41.0"

[dev-dependencies]
cargo-watch = "8.5.3"
