[package]
name = "data_apis"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"                                                     # Standard utilities
base64 = "0.22.1"
bson = "2.13.0"
futures-util = "0.3.31"
mongodb = "3.1.0"
ring = "0.17.8"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
tokio = "1.41.0"
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark" }
ark-ff = "0.4.0"
ark-std = "0.4.0"
ark-bn254 = "0.4.0"
strum = "0.26.3"
strum_macros = "0.26.4"
chrono = "0.4.38"
url = "2.5.3"
env_logger = "0.11.5"
zkcdid-lib-rs = { path = "../zkcdid-lib-rs" }

[dev-dependencies]
cargo-watch = "8.5.3"
