[tool.poetry]
name = "visualization"
version = "0.1.0"
description = ""
authors = ["tuhoag <hatu87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
seaborn = "^0.13.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
