[package]
name = "zk_oracles"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "listener"
path = "src/listener.rs"

[dependencies]
prost = "0.13.3"
tonic = "0.12.3"
serde = "1.0.215"
serde_json = "1.0.133"
alloy = { version = "0.7.0", features = ["full"] }
eyre = "0.6.12"
tokio = { version="1.41.1", features = ["full"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
thiserror = "2.0.4"
url = "2.5.4"
mongodb = "3.1.0"
bson = "2.13.0"
alloy-sol-types = "0.8.14"
zkcdid-lib-rs = { path = "../zkcdid-lib-rs" }
reqwest = { version = "0.12.9", features = ["json"] }

[build-dependencies]
tonic-build = "0.12.3"
