[package]
name = "zkcdid-lib-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bson = "2.13.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
strum = "0.26.3"
strum_macros = "0.26.4"
base64 = "0.22.1"
sha2 = "0.10.8"
futures-util = "0.3.31"
mongodb = "3.1.0"
url = "2.5.4"
alloy = { version = "0.7.0", features = ["full"] }
tonic = "0.12.3"
